<resources>
    <string name="app_name">天才网</string>
    <string name="login">登录</string>
    <string name="find_passwd">忘记密码?</string>
    <string name="protocol_txt">服务协议</string>
    <string name="protocol_txt2">隐私政策</string>
    <string name="protocol_hint">同意</string>
    <string name="login_user_hit">请输入手机号码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_mail">请输入邮箱</string>
    <string name="input_wx">请输入微信号</string>
    <string name="input_qq">请输入QQ号</string>
    <string name="input_valide_code">请输入验证码</string>
    <string name="input_reset_userid">请输入账号</string>
    <string name="input_reset_username">请输入用户名</string>
    <string name="input_reset_paswd">请输入密码,至少6位</string>
    <string name="input_old_paswd">请输入原密码,至少6位</string>
    <string name="input_new_paswd">请输入新密码,至少6位</string>
    <string name="sendCode">获取验证码</string>
    <string name="input_ok_passwd">确认密码</string>
    <string name="passwd_submit">提 交</string>
    <string name="login_pwd_hit">请输入密码</string>
    <string name="my_progress">测试</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_network_teach">细线</string>
    <string name="my_preferential">我的优惠券</string>
    <string name="user_feedback">意见反馈</string>
    <string name="user_evaluation">我的评价</string>
    <string name="user_exit_login">退出登录</string>
    <string name="user_face">人脸录入</string>
    <string name="user_userInfo">会员资料</string>
    <string name="user_bindinfo">绑定信息</string>
    <string name="user_bindphone">绑定手机</string>
    <string name="fee_child">下级奖金</string>
    <string name="job_detail">招聘详情</string>
    <string name="cooperate_detail">我要合作</string>
    <string name="resume_detail">我的简历</string>
    <string name="notice_detail">通知详情</string>
    <string name="fuwu">服务协议</string>
    <string name="yins">隐私政策</string>
    <string name="message">消息</string>
    <string name="message_detail">消息详情</string>
    <string name="setting_aboutus">关于我们</string>
    <string name="myjob">我的职位</string>
    <string name="main_me">我的</string>
    <string name="main_trends">账富</string>
    <string name="main_human">招聘</string>
    <string name="main_home">首页</string>
    <string name="dialog_title_default">操作确认</string>
    <string name="dialog_msg_default">您确定进行此操作吗?</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="login_loading">正在登录...</string>
    <string name="register_loading">正在注册...</string>
    <string name="modify_loading">正在修改...</string>

    <string name="setting">设置</string>
    <string name="cancel2">取消</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">\r\r\r当前应用缺少必要权限。\n\n\r\r\r请点击\"设置\"-\"权限\"-打开所需权限。</string>

    <string name="home">主页</string>
    <string name="register">注册</string>
    <string name="reset">重置密码</string>
    <string name="modify">修改密码</string>
    <string name="network_conection_exce">网络连接失败,请重试</string>
    <string name="network_timeout_exce">请求超时，请重试</string>
    <string name="req_exce_msg">请求失败，请稍后重试</string>


    <!--我的界面-->
    <string name="user_info_coupon">账号关联</string>
    <string name="user_info_progressquery">密码管理</string>
    <string name="user_info_coach">实名认证</string>
    <string name="user_info_resume">我的简历</string>
    <string name="user_info_more">系统设置</string>
    <string name="user_info_attention">会员资料</string>
    <string name="user_info_certification">实名认证</string>
    <string name="user_info_wall">发展人脉</string>
    <string name="user_info_child">人脉信息</string>
    <string name="user_info_cooperate">我要合作(反馈)</string>
    <string name="user_info_myjob">我的职位</string>
    <string name="user_info_contace">评价管理</string>
    <string name="user_info_complaint">投诉</string>
    <string name="user_about_us">关于我们</string>
    <string name="user_info_exit">退出登陆</string>
    <!--用户资料-->
    <string name="user_info_memberid">会员编号</string>
    <string name="user_info_membername">昵称</string>
    <string name="user_info_bank">开户银行</string>
    <string name="user_info_bankNum">银行账户</string>
    <string name="user_info_mobile">手机号码</string>
    <string name="user_info_mail">绑定邮箱</string>
    <string name="user_info_wx">绑定微信</string>
    <string name="user_info_qq">绑定QQ</string>
    <string name="user_info_idnumber">身份证号</string>
    <!--关于我们-->
    <string name="setting_web">网址</string>
    <string name="setting_phone">服务热线</string>
    <string name="setting_mail">邮箱</string>
    <string name="setting_wechat">微信服务号</string>
    <string name="user_info_parant">上级代理</string>
    <string name="user_info_realname">真实姓名</string>
    <string name="user_info_Gender">性别</string>
    <string name="user_info_birthdate">出生日期</string>
    <string name="user_info_Province">地区</string>
    <string name="user_info_city">市/区</string>
    <string name="user_info_parentid">上级代理编号</string>

    <string name="user_bind_phone">绑定手机</string>
    <string name="user_bind_mail">绑定邮箱</string>
    <string name="user_bind_wx">绑定微信</string>
    <string name="user_bind_qq">绑定QQ</string>

    <string name="user_share">分享</string>

    <string name="user_setting">系统设置</string>
    <string name="user_setting_version">版本检测</string>
    <string name="user_setting_us">关于我们</string>

</resources>
