<com.tiandu.recruit.stud.view.widget.MyRadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_radio_group"
    android:layout_width="match_parent"
    android:layout_height="@dimen/space_49"
    android:background="@color/color_fe"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/rb_home"
        style="@style/index_radio_button_style"
        android:checked="true"
        android:drawableTop="@drawable/select_main_home"
        android:text="@string/home"/>

    <RadioButton
        android:id="@+id/rb_human"
        style="@style/index_radio_button_style"
        android:drawableTop="@drawable/select_main_human"
        android:text="@string/main_human"
        android:checked="false" />

    <RadioButton
        android:id="@+id/rb_trends"
        style="@style/index_radio_button_style"
        android:drawableTop="@drawable/select_main_trends"
        android:text="@string/main_trends"/>

    <RadioButton
        android:id="@+id/rb_me"
        style="@style/index_radio_button_style"
        android:drawableTop="@drawable/select_main_me"
        android:text="@string/main_me"/>

</com.tiandu.recruit.stud.view.widget.MyRadioGroup>