<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                style="@style/change_trade_pwd_style"
                android:text="@string/user_info_memberid" />

            <com.tiandu.recruit.stud.view.ClearEditText
                android:id="@+id/etMemberID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"
                android:minHeight="@dimen/size_45dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/comm_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                style="@style/change_trade_pwd_style"
                android:text="@string/user_info_membername" />

            <com.tiandu.recruit.stud.view.ClearEditText
                android:id="@+id/etMemberName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"
                android:minHeight="@dimen/size_45dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/comm_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                style="@style/change_trade_pwd_style"
                android:text="@string/user_info_mobile" />

            <com.tiandu.recruit.stud.view.ClearEditText
                android:id="@+id/etBindMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"
                android:minHeight="@dimen/size_45dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/comm_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                style="@style/change_trade_pwd_style"
                android:text="@string/user_info_mail" />

            <com.tiandu.recruit.stud.view.ClearEditText
                android:id="@+id/etBindEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"
                android:minHeight="@dimen/size_45dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/comm_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                style="@style/change_trade_pwd_style"
                android:text="@string/user_info_wx" />

            <com.tiandu.recruit.stud.view.ClearEditText
                android:id="@+id/etBindWechat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"
                android:minHeight="@dimen/size_45dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/comm_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                style="@style/change_trade_pwd_style"
                android:text="@string/user_info_qq" />

            <com.tiandu.recruit.stud.view.ClearEditText
                android:id="@+id/etBindQQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="number"
                android:minHeight="@dimen/size_45dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/comm_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                style="@style/change_trade_pwd_style"
                android:text="@string/user_info_idnumber" />

            <com.tiandu.recruit.stud.view.ClearEditText
                android:id="@+id/etIDNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="number"
                android:minHeight="@dimen/size_45dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/comm_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                style="@style/change_trade_pwd_style"
                android:text="@string/user_info_realname" />

            <com.tiandu.recruit.stud.view.ClearEditText
                android:id="@+id/etRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"
                android:minHeight="@dimen/size_45dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/comm_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                style="@style/change_trade_pwd_style"
                android:text="@string/user_info_Gender" />

            <com.tiandu.recruit.stud.view.ClearEditText
                android:id="@+id/etGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"
                android:minHeight="@dimen/size_45dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/comm_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                style="@style/change_trade_pwd_style"
                android:text="@string/user_info_birthdate" />

            <com.tiandu.recruit.stud.view.ClearEditText
                android:id="@+id/etBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"
                android:minHeight="@dimen/size_45dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/comm_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                style="@style/change_trade_pwd_style"
                android:text="@string/user_info_Province" />

            <com.tiandu.recruit.stud.view.ClearEditText
                android:id="@+id/etProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"
                android:minHeight="@dimen/size_45dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/comm_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                style="@style/change_trade_pwd_style"
                android:text="@string/user_info_city" />

            <com.tiandu.recruit.stud.view.ClearEditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"
                android:minHeight="@dimen/size_45dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/comm_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                style="@style/change_trade_pwd_style"
                android:text="@string/user_info_parentid" />

            <com.tiandu.recruit.stud.view.ClearEditText
                android:id="@+id/etParentID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"
                android:minHeight="@dimen/size_45dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/comm_line" />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:background="@drawable/select_corner_state_green"
            android:text="@string/passwd_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large" />
    </LinearLayout>


</LinearLayout>