<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/module_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_bg_white">

        <TextView
            android:id="@+id/dgMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/size_4dp"
            android:padding="@dimen/size_15dp"
            android:singleLine="false"
            android:text="@string/dialog_msg_default"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/dgMsg"
            android:background="#dadada" />

        <TextView
            android:id="@+id/dgOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="@dimen/size_15dp"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium" />
    </RelativeLayout>

    <TextView
        android:id="@+id/dgCannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/module_one"
        android:layout_marginTop="@dimen/size_13dp"
        android:background="@drawable/shape_corner_bg_white"
        android:gravity="center"
        android:padding="@dimen/size_15dp"
        android:text="@string/cancel"
        android:textColor="@color/deep_blue"
        android:textSize="@dimen/font_medium" />

</RelativeLayout>